Fri Jul 26 20:55:12 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* secure.c (secure_putbyte): Reset nout to zero on errorso we
        don't overflow our buffer.

	* ftp.c (sendrequest): If there is an error in secure_write, break
        out of the loop.

	* secure.c(FUDGE_FACTOR): Define for GSSAPI so writes don't fail.
        i chose a value of 64, which is larger than the apparent 52 bytes
        of additional data but I'm not sure 52 is constant.

	(secure_putbuf): Set bufsize to the size we actually allocate
	     Also, write foure bytes for net_len no matter how long it
	     actually is.  I would rather declare it a 32-bit type but am not
	     sure whether to use the GSSAPI, krb4, or krb5 32-bit int.

Wed Jul 10 16:40:19 1996  Marc Horowitz  <marc@mit.edu>

	* cmdtab.c (cmdtab[]), cmds.c (delete_file): rename delete() to
 	delete_file() to avoid conflict with the dbm delete() function

Thu Mar 28 21:07:40 1996  Ken Raeburn  <raeburn@cygnus.com>

	* cmds.c (setpeer): Define unix for HP-UX.

Thu Mar 28 19:26:53 1996  Marc Horowitz  <marc@mit.edu>

	* secure.c (secure_putbuf): the size computation of the output
 	buffer was ok for krb4, but completely wrong for gssapi.  I moved
 	the code into the KERBEROS block, and wrote suitable code for
 	GSSAPI.  This affects the client and server, which were core
 	dumping on hpux.

Mon Mar 18 12:12:44 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* secure.c, ftp.c, ftp_var.h: Define STDARG if HAVE_STDARG_H is
 		defined (in addition to the other tests)

	* configure.in: Add AC_HEADER_STDARG

Fri Feb 16 15:50:51 1996  Mark Eichin  <eichin@cygnus.com>

	* ftp.c (do_auth): return status handling fixes from kbalk@hp.com.

Tue Jan 16 19:05:31 1996  Mark Eichin  <eichin@cygnus.com>

	* ftp.c (login): move do_auth ...
	* cmds.c (setpeer): ... to just before login call.

Mon Feb 5 09:06:16 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Check for stdlib.h
